--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion 29
@@ -19,16 +20,14 @@ android {
 
     buildTypes {
         release {
-            buildConfigField 'String', 'BASE_URL', '"https://newsapi.org/v2/"'
-            buildConfigField 'String', 'API_KEY', '"84a072f692a848689b11ff35496cddcc"'
+            buildConfigField 'String', 'BASE_URL', '"https://us-central1-bks-test-digital-recharges.cloudfunctions.net/app/"'
 
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
 
         debug {
-            buildConfigField 'String', 'BASE_URL', '"https://newsapi.org/v2/"'
-            buildConfigField 'String', 'API_KEY', '"84a072f692a848689b11ff35496cddcc"'
+            buildConfigField 'String', 'BASE_URL', '"https://us-central1-bks-test-digital-recharges.cloudfunctions.net/app/"'
         }
     }
 
@@ -41,6 +40,8 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions { jvmTarget = "1.8" }
+
 }
 
 dependencies {
@@ -48,7 +49,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
@@ -57,6 +58,7 @@ dependencies {
 
     //Dagger
     implementation 'com.google.dagger:dagger:2.25.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt 'com.google.dagger:dagger-compiler:2.25.4'
 
     //Retrofit
@@ -79,8 +81,15 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
+    //Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    //Navigation
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
 }
